<resources>
    <string name="app_name">AndroidNotifications</string>
    <string name="action_style_notification">Notification Actions</string>
    <string name="heads_up_style_notification">Heads Up Notification</string>
    <string name="large_text_style_notification">Large Text Notification</string>
    <string name="notifications_in_android">Notifications in Android</string>
    <string name="inbox_style_notification">Inbox Notification</string>
    <string name="message_style_notification">Message Notification</string>
    <string name="image_style_notification">Image Notification</string>
    <string name="reply_notification">Reply Notification</string>
    <string name="media_notification">Media Notification</string>
    <string name="large_notification_text">Android is a mobile operating system developed by Google.\n based on a modified version of the Linux kernel and other open source software and designed primarily for touchscreen mobile devices such as smartphones and tablets.\n In addition, Google has further developed Android TV for televisions, Android Auto for cars, and Wear OS for wrist watches, each with a specialized user interface.\n Variants of Android are also used on game consoles, digital cameras, PCs and other electronics.</string>
    <string name="heads_up_notification_error">Something went wrong with heads up notification</string>
    <string name="message_style_notification_error">Something went wrong with message style notification</string>
    <string name="inbox_style_notification_error">Something went wrong with Inbox Style notification</string>
    <string name="large_text_notification_error">Something went wrong with Large text notification</string>
    <string name="image_style_notification_error">Something went wrong with image notification</string>
    <string name="action_notification_error">Something went wrong with action notification</string>
    <string name="notification_reply_title">Message Received</string>
    <string name="notification_reply_message">Type your message below.</string>
    <string name="notification_reply">Reply</string>
    <string name="previous">Previous</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">FastFoward</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="seek">Seek</string>
    <string name="play">Play</string>
    <string name="media_notification_error">Lolipop and Above Support Needed</string>
    <string name="image_preview_text">Image Preview</string>
    <string name="image_content_title">Image Title</string>
    <string name="play_next">Play Next</string>
    <string name="play_previous">Play Previous</string>
    <string name="artist_name">Sarabjit Bagga</string>
    <string name="song_title">Sarabjit Android Blog</string>
</resources>
